--- a/component/forms/common/fields/plugins/canvas-painter/canvas-painter.html
+++ b/component/forms/common/fields/plugins/canvas-painter/canvas-painter.html
@@ -18,11 +18,11 @@
 </figure>
 <div class="row">
     <div class="col-md-12">
-        <button class="btn" title="{{ fieldCopy.readonly ? 'Enable Edit' : 'Save Changes' }}"
-                ng-class="{'btn-warning': fieldCopy.readonly, 'btn-success': !fieldCopy.readonly}"
-                ng-click="toggleEdit()">
-            <i class="fa fa-pencil" ng-if="fieldCopy.readonly"></i>
-            <i class="glyphicon glyphicon-ok" ng-if="!fieldCopy.readonly"></i>
+        <button class="btn btn-warning" title="Enable Edit" ng-if="fieldCopy.readonly" ng-click="enableEdit()">
+            <i class="fa fa-pencil"></i>
+        </button>
+        <button class="btn btn-success" title="Save Changes" ng-if="!fieldCopy.readonly" ng-click="saveEdit()">
+            <i class="glyphicon glyphicon-ok"></i>
         </button>
         <button ng-if="!fieldCopy.readonly" class="btn btn-primary" title="Undo"
                 ng-click="undoCanvas()" ng-disabled="version === 0">
